# CelestialNavigator

./: README.md
protobuf/: StelleriumNetworkInterfacePacket.proto
stellarium/NetworkInterface/: CMakeLists.txt  NetworkInterface.qrc  README  installer.iss
stellarium/NetworkInterface/src/: CMakeLists.txt  NetworkInterface.cpp  NetworkInterface.hpp  NetworkInterfaceUDPThread.cpp  NetworkInterfaceUDPThread.hpp  StelleriumNetworkInterfacePacket.pb.cc  StelleriumNetworkInterfacePacket.pb.h
x-plane/: PI_CelestialNavigator.py
x-plane/celestialnavigator/: EasyDref.py  StelleriumNetworkInterfacePacket_pb2.py  Utilities.py  __init__.py
