# This is the cmake config file for the NetworkInterface plugin
SET(NETWORKINTERFACE_VERSION "0.1.0")
ADD_DEFINITIONS(-DNETWORKINTERFACE_VERSION="${NETWORKINTERFACE_VERSION}")

ADD_SUBDIRECTORY( src )

IF(APPLE)
     SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
ElSE(APPLE)
     SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
ENDIF(APPLE)
INSTALL(FILES DESTINATION "modules/NetworkInterface")
